# iut-techathon-onsite

./: .dockerignore  .gitignore  README.md  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
backend/: .env.example  Dockerfile  README.md  package.json  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/agent/: __init__.py  compiler.py  service.py
backend/app/agent/prompts/: clarify.md  compound.md  system.md
backend/app/api/: routes_agent.py  routes_hardware.py  routes_health.py  routes_ik.py  routes_motion.py  routes_panel.py  routes_pin.py  routes_robot.py  routes_voice.py  websocket_state.py
backend/app/core/: config.py  errors.py
backend/app/hardware/: __init__.py  service.py
backend/app/motion/: __init__.py  planner.py  safety.py  state.py  trajectory.py
backend/app/panel/: __init__.py  service.py
backend/app/pin/: __init__.py  service.py
backend/app/robot/: __init__.py  ik_solver.py  kinematics.py  limits.py  urdf_loader.py
backend/app/schemas/: agent.py  common.py  motion.py  panel.py  pin.py  robot.py  voice.py
backend/app/voice/: __init__.py  keyterms.py  service.py
backend/scripts/: smoke_ik.py
backend/src/: server.js
backend/tests/: test_agent.py  test_forward_kinematics.py  test_ik_solver.py  test_motion_api.py  test_panel_api.py  test_pin_api.py  test_voice_api.py
docs/: architecture.md  phase1-frontend-brief.md  phase2-frontend-brief.md  phase3-frontend-brief.md  phase5-electrical-schematic-brief.md  problem_statement.md  workflow.md
frontend/: .dockerignore  (+5 more)
(+59 files in other folders)
