[project]
name = "iut-techathon-robot-backend"
version = "0.1.0"
description = "FastAPI backend for robotic arm simulation, IK, motion planning, voice, PIN, and hardware phases."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

